# SCOM-X

./: .gitignore  .gitignore_new  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  COMPILE_SUCCESS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELIVERY_CHECKLIST.md  FILE_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  TODO.md  build.bat  build.ps1  deploy.bat  deploy.ps1
.github/workflows/: build.yml  code-quality.yml  release.yml
config/: build.ini
docs/: ARCHITECTURE.md  COLOR_REFERENCE.md  DEVELOPMENT.md  QUICKSTART.md  THEME_DESIGN.md
examples/: serial_port_example.cpp
include/: at_command_page.h  config_manager.h  log_manager.h  log_page.h  log_viewer_dialog.h  main_window.h  operation_logger.h  palette.h  preferences_dialog.h  receive_data_page.h  serial_port.h  splash_screen.h
resources/: resources.qrc  style.qss
scripts/: release.bat  release.sh
src/: config_manager.cpp  log_manager.cpp  main.cpp  main_window.cpp  operation_logger.cpp  preferences_dialog.cpp  serial_port.cpp  splash_screen.cpp
tests/: CMakeLists.txt
ui/: main_window.cpp  main_window.h  main_window.ui  main_window.ui.autosave  style.qss
ui/dialogs/: log_viewer_dialog.cpp
ui/pages/: at_command_page.cpp  at_command_page.ui  log_page.cpp  receive_data_page.cpp
