cmake_minimum_required(VERSION 3.16)
project(SCOMTests)

enable_testing()

# 如果需要添加单元测试，可以在这里配置
# 例如使用 Google Test 或 Qt Test

# 示例：
# find_package(Qt6Test REQUIRED)
# 
# add_executable(test_serial_port test_serial_port.cpp)
# target_link_libraries(test_serial_port Qt6::Test)
# 
# add_test(NAME TestSerialPort COMMAND test_serial_port)
